--- a/katalog.html
+++ b/katalog.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>Adventure Agency - Travel with us!</title>
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
@@ -26,62 +26,68 @@
                 <h1>Putovanja u planine</h1>
                 <br />
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit
-                    natus, voluptatem, quod culpa sint, et veritatis sed nulla
-                    voluptatum illum neque consequuntur? Dicta quasi totam
-                    similique ipsa provident perferendis, delectus, labore
-                    laboriosam, ratione aut ducimus voluptatibus modi quis
-                    corporis. Atque vero magnam tempore ex dolor facere
-                    distinctio natus commodi error!
+                    Adventure Travel Agency nudi nezaboravna putovanja u planine
+                    koja će ispuniti vaše avanturističke snove. Naša ekipa
+                    stručnjaka osigurat će vam sigurno i uzbudljivo iskustvo dok
+                    istražujete divlje krajolike i osvajate vrhove planina.
+                    Saznajte više o prirodi, divljini i lokalnoj kulturi putem
+                    vodiča koji su zaljubljenici u prirodu i avanturisti. Naša
+                    putovanja uključuju različite aktivnosti poput planinarenja,
+                    vožnje biciklom i kampiranja, prilagođene svim razinama
+                    iskustva. Prepustite se čarima planinskih avantura s
+                    Adventure Travel Agency i stvorite nezaboravne uspomene.
                 </p>
                 <br />
                 <img
                     src="./pictures/pexels-eric-sanman-1365425.jpg"
                     alt="planinarenje"
                 />
-                <br>
-                <a href="cjenik.html#putovanje__planine"
-                    >Link na cjenik</a
-                >
+                <br />
+                <a href="cjenik.html#putovanje__planine">Link na cjenik</a>
             </div>
             <div class="katalog__section">
                 <h1>Kampiranje u divljini</h1>
                 <br />
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit
-                    natus, voluptatem, quod culpa sint, et veritatis sed nulla
-                    voluptatum illum neque consequuntur? Dicta quasi totam
-                    similique ipsa provident perferendis, delectus, labore
-                    laboriosam, ratione aut ducimus voluptatibus modi quis
-                    corporis. Atque vero magnam tempore ex dolor facere
-                    distinctio natus commodi error!
+                    Kampiranje u divljini pruža vam priliku da se potpuno
+                    povežete s prirodom i iskusite pravu slobodu. Naša agencija
+                    organizira nezaboravna kampiranja u divljini na udaljenim
+                    lokacijama gdje ćete se probuditi uz zvuk ptica i osjećaj
+                    svježeg zraka. Naši stručni vodiči osiguravaju sigurnost i
+                    podučavaju vas osnovama preživljavanja u divljini. Tijekom
+                    kampiranja, moći ćete istražiti divlje staze, loviti ribu i
+                    upoznati lokalnu floru i faunu. Iskusite pravu pustolovinu i
+                    kampirajte u divljini uz našu Adventure Travel Agency.
                 </p>
                 <br />
                 <img
                     src="./pictures/pexels-cliford-mervil-2398220.jpg"
                     alt="planinarenje"
                 />
-                <br>
+                <br />
                 <a href="cjenik.html#kampiranje__divljina">Link na cjenik</a>
             </div>
             <div class="katalog__section">
                 <h1>Survival trip</h1>
                 <br />
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit
-                    natus, voluptatem, quod culpa sint, et veritatis sed nulla
-                    voluptatum illum neque consequuntur? Dicta quasi totam
-                    similique ipsa provident perferendis, delectus, labore
-                    laboriosam, ratione aut ducimus voluptatibus modi quis
-                    corporis. Atque vero magnam tempore ex dolor facere
-                    distinctio natus commodi error!
+                    Survival tripovi s našom agencijom su intenzivna iskustva
+                    koja će testirati vaše vještine preživljavanja i
+                    istrajnosti. Naši stručnjaci će vas voditi kroz divljinu,
+                    gdje ćete naučiti kako pronaći hranu, vodu i izgraditi
+                    sklonište. Tijekom putovanja, suočit ćete se s izazovima kao
+                    što su orijentacija u divljini i prva pomoć, a sve to uz
+                    potpunu podršku našeg tima. Spremite se za izazov života i
+                    steknite neprocjenjivo iskustvo preživljavanja u divljini s
+                    Adventure Travel Agency. Ova avantura će vam donijeti nove
+                    vještine i samopouzdanje koje ćete nositi sa sobom zauvijek.
                 </p>
                 <br />
                 <img
                     src="./pictures/pexels-baihaki-hine-4314203.jpg"
                     alt="planinarenje"
                 />
-                <br>
+                <br />
                 <a href="cjenik.html#survival__trip">Link na cjenik</a>
             </div>
         </main>
