--- a/kontakt.html
+++ b/kontakt.html
@@ -10,6 +10,7 @@
     <body id="kontakt__body">
       
         <header>
+            <div class="header">
             <img class="logo" src="#" alt="logo" />
             <nav>
                 <ul class="nav__links">
@@ -20,6 +21,7 @@
                     <li><a href="kontakt.html" class="active">Kontakt</a></li>
                 </ul>
             </nav>
+        </div>
         </header>
 
         <main class="main__contact">
