--- a/cjenik.html
+++ b/cjenik.html
@@ -9,6 +9,7 @@
     </head>
     <body>
         <header>
+            <div class="header">
             <img class="logo" src="#" alt="logo" />
             <nav>
                 <ul class="nav__links">
@@ -19,6 +20,7 @@
                     <li><a href="kontakt.html">Kontakt</a></li>
                 </ul>
             </nav>
+        </div>
         </header>
         <main id="main__cjenik">
             <div class="cjenik__hero">
