--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <header>
+        <header> 
+            <div class="header">
             <img class="logo" src="#" alt="logo" />
             <nav>
                 <ul class="nav__links">
@@ -19,7 +20,9 @@
                     <li><a href="kontakt.html">Kontakt</a></li>
                 </ul>
             </nav>
+        </div>
         </header>
+    
 
         
          <section class="hero__image">
