--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <header>
             <div class="header">
-                <img class="logo" src="#" alt="logo" />
+                <img class="logo" src="./pictures/Logo.png" alt="logo" />
                 <nav>
                     <ul class="nav__links">
                         <li><a href="index.html" class="active">Početna</a></li>
@@ -40,12 +40,12 @@
                     <p>
                         Adventure agency je renomirana turistička agencija koja
                         se specijalizira za organizaciju avanturističkih
-                        putovanja širom svijeta. <br />
+                        putovanja širom svijeta. </p> <p>
                         Bez obzira na vaše iskustvo u avanturizmu, Adventure
                         agency ima putovanje koje odgovara vašim potrebama, od
-                        početnika do iskusnih avanturista. <br />
+                        početnika do iskusnih avanturista. </p> <p>
                         Ako tražite nezaboravna avanturistička putovanja,
-                        Adventure agency je definitivno agencija za vas!
+                        Adventure agency je definitivno agencija za vas! 
                     </p>
                 </div>
 
@@ -63,10 +63,10 @@
                         Tim ljudi u Adventure agency sastoji se od strastvenih i
                         iskusnih avanturista koji su posvećeni organizaciji
                         nezaboravnih avanturističkih putovanja za svoje
-                        klijente. <br />Svaki član tima ima specijalizirano
+                        klijente. </p> <p>Svaki član tima ima specijalizirano
                         znanje i vještine za različite avanturističke
                         aktivnosti, što osigurava da su putovanja organizirana
-                        na najvišoj razini. <br />
+                        na najvišoj razini. </p> <p>
                         Osim toga, tim Adventure agency stalno se educira i
                         ažurira svoje znanje kako bi osigurao najnovije i
                         najsigurnije avanturističke ture za svoje klijente.
