--- a/cjenik.html
+++ b/cjenik.html
@@ -10,7 +10,7 @@
     <body>
         <header>
             <div class="header">
-            <img class="logo" src="#" alt="logo" />
+                <img class="logo" src="./pictures/Logo.png" alt="logo" />
             <nav>
                 <ul class="nav__links">
                     <li><a href="index.html">Početna</a></li>
